--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "iagnmft-nodejs",
   "version": "0.1.0",
   "private": true,
-  "description": "Amazon Reseller shop for iaintgotnomoneyforthat.com with automated import scripts using the Amazon Reselllers API.",
+  "description": "Amazon Reseller shop for iaintgotmoneyforthat.com with automated import scripts using the Amazon Reselllers API.",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "echo todo",
+    "test": "jest --watch",
+    "test:ci": "jest --ci",
     "prepare": "husky install"
   },
   "repository": {
@@ -32,12 +33,18 @@
     "react-dom": "18.0.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.1.1",
+    "@testing-library/user-event": "^14.1.1",
     "@types/node": "17.0.25",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.1",
+    "babel-jest": "^27.5.1",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
+    "eslint-plugin-testing-library": "^5.3.1",
     "husky": "^7.0.4",
+    "jest": "^27.5.1",
     "lint-staged": "^12.4.0",
     "prettier": "^2.6.2",
     "typescript": "4.6.3"
