Fix linter issues

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
-  "extends": "next/core-web-vitals",
+  "extends": ["next/core-web-vitals", "plugin:prettier/recommended"],
   "root": true,
-  "plugins": ["testing-library"],
+  "plugins": ["testing-library", "prettier"],
   "overrides": [
     // Only uses Testing Library lint rules in test files
     {
@@ -11,5 +11,17 @@
       ],
       "extends": ["plugin:testing-library/react"]
     }
-  ]
+  ],
+  "rules": {
+    "indent": ["error", 2],
+    "prettier/prettier": [
+      "error",
+      {
+        "trailingComma": "es5",
+        "tabWidth": 2,
+        "semi": false,
+        "singleQuote": true
+      }
+    ]
+  }
 }
