--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "babel-jest": "^27.5.1",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-testing-library": "^5.3.1",
     "husky": "^7.0.4",
     "jest": "^27.5.1",
