--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,15 @@
         "trailingComma": "es5",
         "tabWidth": 2,
         "semi": false,
-        "singleQuote": true
+        "singleQuote": true,
+        "overrides": [
+          {
+            "files": "*.json",
+            "options": {
+              "parser": "json"
+            }
+          }
+        ]
       }
     ]
   }
