--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,5 @@
 {
-  "*.{ts,js}": "eslint --fix",
-  "*.json": "prettier --write"
+  "*.{ts,js,tsx,jsx}": "eslint --fix",
+  "*.json": "prettier --write",
+  "*.{css,scss}": "stylelint --fix"
 }
