--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:css": "stylelint \"**/*.css\" --fix",
     "test": "jest --watch",
     "test:ci": "jest --ci",
     "prepare": "husky install"
@@ -49,6 +50,9 @@
     "jest": "^27.5.1",
     "lint-staged": "^12.4.0",
     "prettier": "^2.6.2",
+    "stylelint": "^14.7.1",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard": "^25.0.0",
     "typescript": "4.6.3"
   }
 }
