--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "jest": "^27.5.1",
     "lint-staged": "^12.4.0",
     "prettier": "^2.6.2",
+    "sass": "^1.51.0",
     "stylelint": "^14.7.1",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^25.0.0",
