--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "dependencies": {
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "wpapi": "^1.2.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -40,6 +41,7 @@
     "@types/node": "17.0.25",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.1",
+    "@types/wpapi": "^1.1.1",
     "babel-jest": "^27.5.1",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
