add bootstrap and nav bar

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,3 +1,16 @@
 {
-  "extends": ["stylelint-config-standard", "stylelint-config-prettier"]
+  "customSyntax": "postcss-scss",
+  "extends": ["stylelint-config-standard", "stylelint-config-prettier"],
+  "plugins": ["stylelint-scss"],
+  "rules": {
+    "selector-class-pattern": "[a-z]+",
+    "selector-pseudo-class-no-unknown": [
+      true,
+      {
+        "ignorePseudoClasses": ["global"]
+      }
+    ],
+    "at-rule-no-unknown": null
+  },
+  "syntax": "scss"
 }
