--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "homepage": "https://github.com/by-rojo/iagnmft-nodejs#readme",
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "classnames": "^2.3.1",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
@@ -51,11 +53,14 @@
     "husky": "^7.0.4",
     "jest": "^27.5.1",
     "lint-staged": "^12.4.0",
+    "postcss": "^8.4.13",
+    "postcss-scss": "^4.0.4",
     "prettier": "^2.6.2",
     "sass": "^1.51.0",
     "stylelint": "^14.7.1",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^25.0.0",
+    "stylelint-scss": "^4.2.0",
     "typescript": "4.6.3"
   }
 }
