--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
+    "dayjs": "^1.11.1",
     "he": "^1.2.0",
     "next": "12.1.5",
     "react": "18.0.0",
