--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/by-rojo/iagnmft-nodejs#readme",
   "dependencies": {
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "dayjs": "^1.11.1",
@@ -36,6 +37,7 @@
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-infinite-scroller": "^1.2.6",
     "wpapi": "^1.2.2"
   },
   "devDependencies": {
@@ -46,6 +48,7 @@
     "@types/node": "17.0.25",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.1",
+    "@types/react-infinite-scroller": "^1.2.3",
     "@types/wpapi": "^1.1.1",
     "babel-jest": "^27.5.1",
     "eslint": "8.13.0",
