--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
   },
   "homepage": "https://github.com/by-rojo/iagnmft-nodejs#readme",
   "dependencies": {
+    "@svgr/webpack": "^6.2.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
     "classnames": "^2.3.1",
     "dayjs": "^1.11.1",
     "he": "^1.2.0",
