--- a/.env
+++ b/.env
@@ -6,3 +6,10 @@ HOME_PAGE_CACHE_SECONDS=86400
 IMAGE_DOMAIN_1=
 TEST_IMAGE_URL=
 NEXT_PUBLIC_HOST_URL=https://rvdevil.com
+NEXT_PUBLIC_FACEBOOK_PROFILE_URL=
+NEXT_PUBLIC_TWITTER_PROFILE_URL=
+NEXT_PUBLIC_INSTAGRAM_PROFILE_URL=
+NEXT_PUBLIC_TIKTOK_PROFILE_URL=
+NEXT_PUBLIC_PINTEREST_PROFILE_URL=
+NEXT_PUBLIC_YOUTUBE_PROFILE_URL=
+NEXT_PUBLIC_COMPANY_NAME=
