--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
   "homepage": "https://github.com/by-rojo/iagnmft-nodejs#readme",
   "dependencies": {
     "@svgr/webpack": "^6.2.1",
+    "@types/lodash": "^4.14.182",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "classnames": "^2.3.1",
     "dayjs": "^1.11.1",
     "he": "^1.2.0",
+    "lodash": "^4.17.21",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
