--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "he": "^1.2.0",
     "lodash": "^4.17.21",
     "next": "12.1.5",
+    "rc-slider": "^10.0.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-infinite-scroller": "^1.2.6",
