--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^14.1.1",
+    "@types/gtag.js": "0.0.10",
     "@types/he": "^1.1.2",
     "@types/node": "17.0.25",
     "@types/react": "18.0.5",
