add env settings for blog and update readme

--- a/.env
+++ b/.env
@@ -17,3 +17,4 @@ NEXT_PUBIC_DEFAULT_BLUR_URL="data:image/webp;base64,UklGRhQDAABXRUJQVlA4WAoAAAAg
 NEXT_PUBLIC_GA_ID=
 NEXT_PUBLIC_SITE_NAME=I aint got money for that!
 NEXT_PUBLIC_SITE_DESCRIPTION=The best place to find and buy the best junk your ass can't afford.
+NEXT_PUBLIC_BLOG_PAGE_DESCRIPTION=Read about the stuff you can't afford on the IAGMFT blog page.
