--- a/package.json
+++ b/package.json
@@ -37,12 +37,15 @@
     "classnames": "^2.3.1",
     "dayjs": "^1.11.1",
     "he": "^1.2.0",
+    "html-react-parser": "^1.4.12",
     "lodash": "^4.17.21",
     "next": "12.1.5",
     "rc-slider": "^10.0.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-infinite-scroller": "^1.2.6",
+    "react-paginate": "^8.1.3",
+    "react-query": "^3.39.0",
     "wpapi": "^1.2.2"
   },
   "devDependencies": {
