--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
-    "@testing-library/user-event": "^14.1.1",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.1",
     "@types/gtag.js": "0.0.10",
     "@types/he": "^1.1.2",
     "@types/node": "17.0.25",
@@ -64,9 +64,10 @@
     "eslint-config-next": "12.1.5",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-testing-library": "^5.3.1",
+    "eslint-plugin-testing-library": "^5.5.1",
     "husky": "^7.0.4",
     "jest": "^27.5.1",
+    "jest-mock-axios": "^4.6.1",
     "lint-staged": "^12.4.0",
     "postcss": "^8.4.13",
     "postcss-scss": "^4.0.4",
